@@ -6,6 +6,8 @@
   <modelmapping model="wall_3" blocktype="wall/3/timber" />
   <modelmapping model="wall_3" blocktype="wall/3/timber_" />
   <modelmapping model="column_3" blocktype="column/3/timber" />
+  <modelmapping model="column_fractured_3" blocktype="column/fractured/3/stone" />
+  <modelmapping model="column_segmented_3" blocktype="column/segmented/3/stone" />
   <modelmapping model="wall_1.5" blocktype="wall/1.5/timber" />
   <modelmapping model="floor" blocktype="floor/24/stone" />
   <modelmapping model="roof" blocktype="roof/24/stone" />
